@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-11-24T16:03:06Z",
-  "count_outdated" : 88573,
-  "uniques_outdated" : 1222,
-  "count" : 94301,
+  "timestamp" : "2022-11-25T00:28:49Z",
+  "count_outdated" : 88983,
+  "uniques_outdated" : 1223,
+  "count" : 94775,
   "uniques" : 1254,
   "clones" : [
     {
-      "timestamp": "2022-11-10T00:00:00Z",
-      "count": 67,
-      "count_minmax": [ 67, 410 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-11-11T00:00:00Z",
-      "count": 413,
+      "count": 392,
       "count_minmax": [ 140, 413 ],
       "uniques": 4,
       "uniques_minmax": [ 2, 4 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 265,
-      "count_minmax": [ 143, 265 ],
+      "count": 417,
+      "count_minmax": [ 143, 417 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
