@@ -1,15 +1,10 @@
 {
-  "count": 5728,
+  "count": 5792,
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2022-11-10T00:00:00Z",
-      "count": 67,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-11T00:00:00Z",
-      "count": 413,
+      "count": 392,
       "uniques": 4
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 265,
+      "count": 417,
       "uniques": 2
     }
   ]
