@@ -1,3 +1,11 @@
+2022-11-25T00:28:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3544413422 # 653
+* notice: last 14d: unq all: 7 5792
+* notice: prev accum: outdated-unq outdated-all / unq all: 1222 88573 / 1254 94301
+* notice: next accum: outdated-unq outdated-all / unq all: 1223 88983 / 1254 94775
+* notice: prev exec diff / last date diff / accum: unq all: +0 +152 -0 -21 / +2 +417 -0 -0 / 2 417
+* notice: removed / changed dates: [2022-11-10] / [2022-11-11 2022-11-24]
+
 2022-11-24T16:03:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3542128609 # 652
 * notice: last 14d: unq all: 7 5728
